# rere

./: .gitignore  .travis.yml  Makefile  cabal.haskell-ci  cabal.project  changelog.md  rere.cabal  rere.m  rere.sty
.github/workflows/: haskell-ci.yml  update-haskell-ci-on-tested-with-pr.yml
bench/: Bench.hs  DerpConv.hs  JSON.hs
experiment/: DepMap.hs  ST.hs
src/: RERE.hs
src/RERE/: Absurd.hs  CFG.hs  CharClasses.hs  CharSet.hs  Examples.hs  Gen.hs  LaTeX.hs  Ref.hs  ST.hs  Tuples.hs  Type.hs  Var.hs
src/RERE/Examples/: JSON.hs
test/: Tests.hs
